# kslice

./: .gitignore  CMakeLists.txt  README
python_wrap/KSliceEffect/: CMakeLists.txt  KSliceEffect_bak.py  kslice_vtkPythonWrap.cpp
src/: CMakeLists.txt  CTestConfig.cmake  RunCppCheckHere.sh
src/Gao3DRSS/: CMakeLists.txt
src/Gao3DRSS/include/: Gao3DRSS.h  HistogramPlot.h  SFLS.h  SFLSRobustStatSegmentor3DLabelMap_single.h  SFLSRobustStatSegmentor3DLabelMap_single.txx  SFLSSegmentor3D.h  SFLSSegmentor3D.txx  labelMapPreprocessor.h
src/Gao3DRSS/src/: Gao3DRSS.cpp  HistogramPlot.cpp
src/Gao3DRSS/tests/: CMakeLists.txt  SFLSRobustStat3DTestConsole.cxx
src/GraphCut/doc/: MexGuide.txt  README.txt
src/GraphCut/include/: graphchop.h  jm.h  weight.h
src/GraphCut/matlab/: compile.m  makeGraphStruct.m  preCluster.m  runIKmodStat.m  runMICCAI.m
src/GraphCut/src/: GCoptimization.cpp  graph.cpp  graphchop.cc  main_mex.cpp
src/GraphCut_64bit/include/: GCoptimization.h  energy.h  graph.h
src/GraphCut_64bit/matlab/: run.m  runIKmod.m  runMICCAI.m
src/GraphCut_64bit/src/: Makefile
src/KSegmentor/: CMakeLists.txt
src/KSegmentor/include/: EdgeContrastEnergy.h  ImageEnergy.h  KSegmentor.h  KSegmentor3D.h  KSegmentorBase.h  KoupledKurvolver.h
src/KSegmentor/src/: EdgeContrastEnergy.cpp  ImageEnergy.cpp  KSegmentor.cpp  KSegmentor3D.cpp  KSegmentorBase.cpp  KSegmentorUtils.cpp  KoupledKurvolver.cpp  LevelSetCurve.cpp  MeanEnergy.cpp
src/KSegmentor/tests/: CMakeLists.txt  coupled_levelset_test.cpp  coupled_levelset_test1.cpp  ksegmentor_test1_sfls_opencv.cpp  ksegmentor_test2_sfm2D3D.cpp  ksegmentor_test2_sfm3D.cpp  ksegmentor_test_InputAndRunSeg.cpp  ksegmentor_test_KSegmentor3D.cpp  ksegmentor_test_sfm2D3D.cpp  savepng_test.cpp
src/KViewerMain/: CMakeLists.txt
src/KViewerMain/KSlice_python/: CMakeLists.txt  KSlice.py
src/KViewerMain/exes/: CMakeLists.txt  KViewer_desktop.cpp  compiler_compatibility_test.cpp  imageglob2mha.cpp  mha_decompress_resave.cpp  test8_ParametricSurface.cpp  test9_DataVolumeToSurface.cpp  test_KViewerParamWidget.cpp
src/KViewerMain/include/: GUISetup.h  KDataWarehouse.h  KInteractiveLabelMap.h  KSandbox.h  KSlice.h  KViewer.h  KViewerOptions.h  KVolumeRenderView.h  KWidget_2D_left.h  KWidget_3D_right.h  KvtkImageInteractionCallback.h  ParameterWidget.h  kv_export.h  vtkKSlice.h
src/KViewerMain/scripts/: generate_moc.sh  moc_creator_win.bat
src/KViewerMain/src/: KDataWarehouse.cpp  KInteractiveLabelMap.cpp  KSandbox.cpp  KSlice.cpp  KViewer.cpp  KViewerOptions.cpp  KVolumeRenderView.cpp  KWidget_2D_left.cpp  KWidget_3D_right.cpp  KvtkImageInteractionCallback.cpp  ParameterWidget.cpp  ParameterWidget.ui  ShapeFitWidget.ui  moc_KViewer.cpp  vtkKSlice.cpp
src/MeshCurvolver-2.0/: CMakeLists.txt
src/MeshCurvolver-2.0/doc/: guidelines.txt  module_diagram_classes.pptx  refactoring_thoughts.xmind  requirements_slicer_lsvtk.xmind  slicer-module-requirements.txt
src/MeshCurvolver-2.0/include/: LSops.h  LevelSetInitHelper.h  MeanCurvatureEnergy.h  MeshEnergy.h  MeshOps.h  ModuleEntry.h  Utils.h  path_finder.h  polydata_helper.h  vtkComputeLocalGeometry.h  vtkInitClosedPath.h  vtkLevelSetMeshEvolver.h
src/MeshCurvolver-2.0/matlab-util/: DrawSets.m  create_mesh_DAT_files.m  make_finer_mesh.m  sfls_test.m
src/MeshCurvolver-2.0/slicer-module-ref/: CMakeLists.txt  SparseFieldLevelSetContour.cxx
src/MeshCurvolver-2.0/src/: LSops.cxx  LevelSetInitHelper.cpp  MeanCurvatureEnergy.cpp  MeshEnergy.cpp  MeshOps.cxx  ModuleEntry.cxx  SparseFieldLevelSetContour.cxx  Utils.cxx  path_finder.cpp  polydata_helper.cpp  vtkComputeLocalGeometry.cxx  vtkInitClosedPath.cxx  vtkLevelSetMeshEvolver.cxx
src/MeshCurvolver-2.0/tests/: CMakeLists.txt  meshcurvolver_test_common.cpp  meshcurvolver_test_common.h  test1.cxx  test2_compute_geom.cxx  test3_init_LZ_donut.cxx  test4_glyphs.cxx  test5_distance_functions_from_markers.cxx  test6_init_LZ_hard.cxx  test7_evolve_LZ.cxx
src/SampleApplications/: CMakeLists.txt  grabcut.cpp
src/SampleApplications/BatchVoxelComputations/: AntiAliasBinaryImage.cpp  CMakeLists.txt  ComputeAndPrintLabelVolumes.cpp  ComputeAndPrintStatistics.cpp  ResampleVolumesToBeIsotropic.cpp
src/SampleApplications/MHADecompressor/: CMakeLists.txt  ImageReadExtractWrite.cxx  dicom2mha.cpp
src/SampleApplications/Make3DModel/: CMakeLists.txt
src/SampleApplications/VolumeRenderDemo/: CMakeLists.txt  ComputeAndPrintLabelVolumes.cpp  FlipVolumeAndSave_test.cpp  LabelMapAsImplicitFunction.cpp  MultiLabelVolumeRender.cpp  VolumeRenderDemo.cxx
src/SampleApplications/qtGUI_Demo/: CMakeLists.txt  build.sh  gui.cpp  gui.h  gui.ui  main.build.sh  main.cpp  moc_gui.cpp  qmake.build.sh  qtGUI_Demo.pro  readme.txt  ui_gui.h
src/VTKtoITKConnection/include/: itkImageToVTKImageFilter.h  itkVTKImageToImageFilter.h
src/VTKtoITKConnection/src/: vtkKWImageIOTest.cxx  vtkKWImageIOTest2.cxx
src/kslice_wrap/: CMakeLists.txt  KSliceEffect.py  KUtil.py  KViz3D_debug.py  qSlicerKSliceModule.cxx  qSlicerKSliceModule.h  qSlicerKSliceModuleWidget.cxx  qSlicerKSliceModuleWidget.h  sample.slicerrc.py  setUpSlicerDebug.py  slicer_memwatch.sh
src/kslice_wrap/Documentation/: GrowCutCL.py  KSlice.dox  PythonTerminalStandaloneCommands.txt  SlicerHelp.txt  SlicerIntegrationSteps.txt  VolumeMasker.py  matlabImgLabTest.txt  slicerrc.py
src/kslice_wrap/Logic/: CMakeLists.txt  KSlice.cpp  KSlice.h  KSlice_smoketest.cpp  vtkKSlice.cpp  vtkKSlice.cpp_bak  vtkKSlice.h  vtkKSlice.h_bak  vtkSlicerKSliceLogic.cxx  vtkSlicerKSliceLogic.h  vtkSysInfo.cxx  vtkSysInfo.h
src/kslice_wrap/Resources/: qSlicerKSliceModule.qrc
src/kslice_wrap/Testing/: CMakeLists.txt
src/kslice_wrap/Widgets/: CMakeLists.txt  qSlicerKSliceFooBarWidget.cxx  qSlicerKSliceFooBarWidget.h
src/sfm_local_chanvese/: CMakeLists.txt
src/sfm_local_chanvese/include/: energy3c.h  interactive_kurvolver.h  koupled_kurvolver.h  llist.h  lsops3c.h  sfm_local_chanvese_mex.h  sparse3c.h
src/sfm_local_chanvese/src/: energy3c.cpp  interactive_kurvolver.cpp  koupled_kurvolver.cpp  llist.cpp  lsops3c.cpp  (+1 more)
(+77 files in other folders)
