include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )
set(MeshcurvolverTestCommon   meshcurvolver_test_common.cpp)

ADD_EXECUTABLE( test1_MeshCurvolverBasic            test1.cxx  ${MeshcurvolverTestCommon} )
ADD_EXECUTABLE( test2_MeshCurvolverComputeGeometry  test2_compute_geom.cxx ${MeshcurvolverTestCommon})
add_executable( test3_MeshCurvolverInitLevelset     test3_init_LZ_donut.cxx ${MeshcurvolverTestCommon})
add_executable( test4_MeshCurvolverGlyphs           test4_glyphs.cxx ${MeshcurvolverTestCommon})
add_executable( test5_MeshCurvolverDistanceFuncs    test5_distance_functions_from_markers.cxx ${MeshcurvolverTestCommon})
add_executable( test6_MeshCurvolverInitLevelset     test6_init_LZ_hard.cxx ${MeshcurvolverTestCommon})
add_executable( test7_MeshCurvolverEvolveLevelset     test7_evolve_LZ.cxx ${MeshcurvolverTestCommon})

TARGET_LINK_LIBRARIES ( test1_MeshCurvolverBasic            MeshContourEvolver ${OUR_VTK_REQUIRED_LIBS} )
TARGET_LINK_LIBRARIES ( test2_MeshCurvolverComputeGeometry  MeshContourEvolver ${OUR_VTK_REQUIRED_LIBS} )
TARGET_LINK_LIBRARIES ( test3_MeshCurvolverInitLevelset     MeshContourEvolver ${OUR_VTK_REQUIRED_LIBS} )
TARGET_LINK_LIBRARIES ( test4_MeshCurvolverGlyphs           MeshContourEvolver ${OUR_VTK_REQUIRED_LIBS} )
TARGET_LINK_LIBRARIES ( test5_MeshCurvolverDistanceFuncs    MeshContourEvolver ${OUR_VTK_REQUIRED_LIBS} )
TARGET_LINK_LIBRARIES ( test6_MeshCurvolverInitLevelset     MeshContourEvolver ${OUR_VTK_REQUIRED_LIBS} )
TARGET_LINK_LIBRARIES ( test7_MeshCurvolverEvolveLevelset     MeshContourEvolver ${OUR_VTK_REQUIRED_LIBS} )
